[package]
name = "sp-database"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://https://github.com/AXIA-DEV/axlib/"
description = "Axlib database trait."
documentation = "https://docs.rs/sp-database"
readme = "README.md"

[dependencies]
parking_lot = "0.11.1"
kvdb = { git = "https://github.com/axia-tech/axia-common", version = "0.10.0" }

