[package]
name = "sp-session"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://https://github.com/AXIA-DEV/axlib/"
description = "Primitives for sessions"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
sp-staking = { version = "4.0.0-dev", default-features = false, path = "../staking" }
sp-runtime = { version = "4.0.0-dev", optional = true, path = "../runtime" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-std/std",
	"sp-staking/std",
	"sp-runtime/std",
]
