[package]
name = "sp-test-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://https://github.com/AXIA-DEV/axlib/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { version = "4.0.0-dev", default-features = false, path = "../application-crypto" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
serde = { version = "1.0.126", optional = true, features = ["derive"] }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../runtime" }
axia-util-mem = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.10.0", default-features = false, features = ["primitive-types"] }

[features]
default = [
	"std",
]
std = [
	"sp-application-crypto/std",
	"serde",
]
