[package]
name = "sp-npos-elections-solution-type"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://https://github.com/AXIA-DEV/axlib/"
description = "NPoS Solution Type"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.80", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0.29"
proc-macro-crate = "1.0.0"

[dev-dependencies]
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1" }
scale-info = "1.0"
sp-arithmetic = { path = "../../arithmetic", version = "4.0.0-dev" }
# used by generate_solution_type:
sp-npos-elections = { path = "..", version = "4.0.0-dev" }
trybuild = "1.0.43"
